--- a/package.json
+++ b/package.json
@@ -9,18 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
+    "@heroicons/react": "^2.1.4",
+    "@material-tailwind/react": "^2.1.9",
+    "@types/nodemailer": "^6.4.15",
+    "axios": "^1.7.2",
+    "cloudinary": "^2.2.0",
+    "clsx": "^2.1.1",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.2.13",
+    "lottie-react": "^2.4.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.24.1",
+    "resend": "^3.4.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
   }
 }
